Fix Sable re-registration after reload + encapsulation sub-evaluator stale cache
- Sable compat: resolve sub-level via container.getPlot(chunkPos) in
  sable so BEs re-associate after world reload.
  Uses O(1) grid lookup, no block entity access — safe during unload.
- GraphEvaluator: add subGraphGenerations map to detect sub-graph
  generation changes and invalidate cached sub-evaluators. Fixes stale
  sub-graph outputs after FORMULA edits inside ENCAPSULATION nodes.
- Remove deprecated scriptCache field (unified to node.cachedScript).
- Docs: encapsulation-sub-evaluator-stale-cache.md

Co-Authored-By: Claude <noreply@anthropic.com>